--- a/HW4/hw4.1.html
+++ b/HW4/hw4.1.html
@@ -40,6 +40,7 @@
             width: 27vw;
             height: 5vh;
             font-family: "KoHo", sans-serif;
+            background-color: rgba(217, 217, 217, 0.60);
         }
         iframe{
             margin-top: 55px;
