--- a/HW4/hw4.1.html
+++ b/HW4/hw4.1.html
@@ -138,21 +138,21 @@
     </div>
     <div class="down">
         <div class="down1">
-            <img style="width: 270px" src="Rectangle%2013.png">
+            <img style="width: 270px" src="Rectangle%2013.png" alt="SnowMountain">
             <h2>Lorem</h2>
             <p>Lorem ipsum dolor sit amet</p>
             <h2>50$</h2>
             <button class="downButton">Button</button>
         </div>
         <div class="down2">
-            <img style="width: 270px" src="Rectangle%2010.png">
+            <img style="width: 270px" src="Rectangle%2010.png" alt="Mountain">
             <h2>Lorem</h2>
             <p>Lorem ipsum dolor sit amet</p>
             <h2>70$</h2>
             <button class="downButton">Button</button>
         </div>
         <div class="down3">
-            <img style="width: 270px" src="Rectangle%2010%20(1).png">
+            <img style="width: 270px" src="Rectangle%2010%20(1).png" alt="Rock">
             <h2>Lorem</h2>
             <p>Lorem ipsum dolor sit amet</p>
             <h2>85$</h2>
