--- a/HW5/hw5.2.html
+++ b/HW5/hw5.2.html
@@ -131,4 +131,5 @@
             <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit</div>
         </div>
     </div>
+</body>
 </html>
